# multiplicity

./: .gitignore  AGENTS.md  GEMINI.md  LICENSE  MOC.md  README.md  SECURITY.md  core_schema.json  Ξ-Constitution.md
docs/: Practical Recipes for Rhythm, Scheduling, and Haptic Systems.docx
docs/adr/: ADR-001-Production-Installation.md
lean/: CompleteFormalizationPlan.md  FormalizationPlan.md  MOC.lean  MTPIFormalizationPlan.md  Main.lean  PIRTM.lean  Proofs.lean  README.md  export_decisions.lean  lake-manifest.json  lakefile.lean  validate_imports.sh
lean/AffineCore/: AdelicBorn.lean  ConstraintNerve.lean  EthicalConvergence.lean  MoldingModularity.lean
lean/CRMF/: Resonance.lean  Stability.lean
lean/Governance/: Commutation.lean  L3_Constitutional.lean  Protocol.lean  QAGI_Verification.lean
lean/MOC/: Config.lean  Core.lean  OperatorLieGrammar.lean  Resonance.lean  Rewrites.lean
lean/MOC_Core_Phase1/: lake-manifest.json  lakefile.lean
lean/Models/: AlpFormalization.lean  ArchemedianFormalization.lean  SigmaKernelFormalization.lean  SpectralResonanceFormalization.lean
lean/PIRTM/: Default.lean  PhaseMirrorFormalization.lean  PirtmCoreFormalization.lean  PirtmRsFormalization.lean  SovereignBoundary.lean  Stability.lean  Transition.lean
lean/SigmaKernel/: StratumI.lean  StratumII.lean  StratumIII.lean
rust/: Cargo.toml
rust/src/: proof_attestation.rs
rust/src/parom/: adversarial.rs  benchmark.rs  bio.rs  calibration.rs  data_loader.rs  lib.rs  main.rs  meta.rs  resilience.rs  semantic.rs  shm.rs  vdj.rs  whitehead_sim.rs
(+102 files in other folders)
