[package]
name = "moc-v2-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "moc-bridge"
path = "src/bridge.rs"

[[bin]]
name = "moc-verifier"
path = "src/verifier.rs"

[[bin]]
name = "pirtm-runtime"
path = "src/runtime.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
md5 = "0.7.0"
lexpr = "0.2"
resonance-rs = { path = "../../crates/resonance" }
